# self-media-auto

./: .env.example  .gitignore  FEISHU_SYNC_GUIDE.md  README.md  README_WEWRITE_XIAOHU.md  SKILL.md  analyze_corrupt.py  check_candidates.py  check_pending_action.py  check_state.py  corrupt_report.txt  current_diff_before_fixing.patch  debug_lines.txt  debug_lines2.py  feishu-card-server.py  find_bad_chars.py  fix_all_bad_lines.py  fix_docstrings.py  fix_encoding.py  fix_garbled.py  fix_multiline.py  fix_output.txt  fix_output2.txt  fix_paths.py  fix_remaining.py  fix_ts.py  fix_wechat.py  fix_wechat1.py  force_update_visuals.py  poll-card-event.py  prompts.md  prompts_manager.json  pyproject.toml  pytest.ini  requirement.txt  requirements.txt  restart_card_server.sh  run_video.py  search_engine.py  self-media-auto.patch  (+30 more)
backup/: feishu-card-server_ot.py  wechat-article.ts
baoyu-post-to-wechat/: SKILL.md  test_basic.ts  test_basic2.ts  test_cdp.ts  test_cdp_clipboard.ts  test_cdp_simple.ts  test_clipboard.ts  test_content.ts  test_cover_download.ts  test_cover_fetch.ts  test_cover_options.ts  test_cover_unc.ts  test_cover_wsh.ts  test_coverhta.ts  test_data_url.ts  test_direct_inject.ts  test_direct_nav.ts  test_editor.ts  test_editor2.ts  test_execmd.ts  test_iframe.ts  test_iframe2.ts  test_inject.ts  test_inject2.ts  test_login.ts  test_mock_iframe.ts  test_nav.ts  test_nav2.ts  test_nav3.ts  test_nav4.ts  test_nav_simple.ts  test_page.ts  test_page_check.ts  test_page_state.ts  test_paste.ts  test_powershell_download.ts  test_prosemirror.ts  test_refresh.ts  (+9 more)
(+195 files in other folders)
