[project]
name = "self-media-workflow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "browserforge>=1.2.4",
    "curl-cffi>=0.14.0",
    "faster-whisper>=1.2.1",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "playwright>=1.58.0",
    "requests>=2.32.5",
    "scrapling>=0.4.2",
    "videofetch>=0.6.8",
    "yt-dlp>=2026.3.13",
]
